[package]
name = "recipio-lang"
version = "0.1.0"
edition = "2021"
description = "cooking recipe language"
license = "MIT"
repository = "https://github.com/ia7ck/recipio-lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"

[lib]
crate-type = ["cdylib", "rlib"]
